Removed AddKeyholder from visible parts of app, it is out of scope. I believe I have fixed the API calls to properly send raw stringified JSON in the request body as the API requires. It works for AddProperty. AddKey and CheckoutProperty are returning false positive in this app and in Postman. Minor formatting change to the SelectKeyholderModal

--- a/UI/src/Components/SelectKeyholderModal.css
+++ b/UI/src/Components/SelectKeyholderModal.css
@@ -15,10 +15,10 @@
 .modal-backdrop .modal-body {
   position: relative;
   display: block;
-  width: 280px;
+  width: 400px;
   margin-left: auto;
   margin-right: auto;
-  height: 360px;
+  height: 400px;
   margin-top: calc(50vh - 180px);
   background-color: white;
 }
